--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -26,3 +26,5 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_KCHAT_APP_2EF9B }}"
           channelId: live
           projectId: kchat-app-2ef9b
+          entrypoint: PrakritiConnect
+          
